--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,52 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.Header-Container{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 10% 10%;
+}
+#Header{
+  color: darkred;
+}
+.articles-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.article{
   text-align: center;
+  font-size: 10px;
+  width: 300px;
+  height:320px;
+  margin: 1%;
+  background-color: aliceblue;
+  box-shadow: 0px 0px 3px blue, 0px 1px 3px black
+}
+#article_img{
+  width: 100%;
+  height:50%
+}
+.article_title{
+  width: 100%;
+  height: 10%;
+  color: darkred;
+}
+.author-italics{
+  font-weight: bold;
+  font-style: italic;
+}
+.underline{
+  text-decoration: underline;
+}
+.article_topic, .article_author{
+  font-size: 1.4em;
+  text-align: left;
+  padding-left: 4%;
+}
+.read-me-btn{
+  padding: 10px;
+  width: 100%;
+  background-color: rgb(169, 110, 110);
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.bold, .read-me-btn{
+  font-weight: bolder;
 }
