--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+html{
+  background-color: beige;
+}
 .Header-Container{
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -22,7 +25,8 @@
 }
 #article_img{
   width: 100%;
-  height:50%
+  height:50%;
+  padding-bottom: 5px;
 }
 .article_title{
   width: 100%;
@@ -49,4 +53,39 @@
 
 .bold, .read-me-btn{
   font-weight: bolder;
+}
+.article-link{
+  text-decoration: none;
+  font-size: 2em;  
+}
+
+
+.article_byid-box {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto; 
+  gap: 20px; 
+  max-width: 900px; 
+  width: 100%;
+  padding: 20px; 
+  box-sizing: border-box; 
+  justify-items: center; 
+}
+
+#solo_title {
+  grid-column: 1 / 4; 
+  grid-row: 1; 
+}
+
+#solo_body {
+  grid-column: 2;
+  grid-row: 2;
+}
+
+#solo_img {
+  grid-column: 1;
+  grid-row: 2; 
+  width: 300px;
+  height: 100%;
+  margin-top: 7%;
 }
