--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,11 @@ html{
   font-size: 2em;  
 }
 
+.article-page{
+  display: flex;
+  justify-content: center;
+
+}
 
 .article_byid-box {
   display: grid;
@@ -86,6 +91,33 @@ html{
   grid-column: 1;
   grid-row: 2; 
   width: 300px;
-  height: 100%;
+  height: 400px;
   margin-top: 7%;
+}
+
+.comments-box {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 40%;
+  margin-right: 5%;
+  border-left: groove blue 5px;
+  background-color: white;
+  position: relative;
+  padding: 10px; 
+  box-sizing: border-box; 
+}
+
+.commentCr,
+.commentA,
+.comment_vote,
+.vote_btn,
+.comment
+ {
+  width: 100%;
+  border-bottom: solid 1px #000;
+  padding: 8px;
+  margin-bottom: 10px;
+  box-sizing: border-box; 
+  display: block; 
 }
