--- a/src/App.css
+++ b/src/App.css
@@ -59,11 +59,11 @@ html{
   font-size: 2em;  
 }
 
-.article-page{
+/* .article-page{
   display: flex;
   justify-content: center;
 
-}
+} */
 
 .article_byid-box {
   display: grid;
@@ -95,29 +95,42 @@ html{
   margin-top: 7%;
 }
 
-.comments-box {
+.comments-box{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  width: 40%;
-  margin-right: 5%;
-  border-left: groove blue 5px;
-  background-color: white;
-  position: relative;
-  padding: 10px; 
-  box-sizing: border-box; 
 }
 
-.commentCr,
-.commentA,
-.comment_vote,
-.vote_btn,
-.comment
- {
-  width: 100%;
-  border-bottom: solid 1px #000;
-  padding: 8px;
-  margin-bottom: 10px;
-  box-sizing: border-box; 
-  display: block; 
+.comment-box{
+  display: block;
+  justify-content: left;
+  border: groove green 3px;
+  border-radius: 10px;
+  margin: 5px;
+  width: 95%;
+  background-color: white;
+}
+.commentCr, .commentA, .comment{
+  border-bottom: solid;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+.btns{
+  text-align: center;
+}
+
+.vote-btn-add, .vote-btn-minus{
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.comment_vote{
+  text-align: center;
+  font-weight: bold;
+}
+#vote-text{
+  font-style: italic;
+  font-weight: bolder;
+  font-size: .8em;
+  text-align: center;
 }
