--- a/src/App.css
+++ b/src/App.css
@@ -1,85 +1,112 @@
-html{
+html {
   background-color: beige;
 }
-.Header-Container{
+.Header-Container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 10% 10%;
+  grid-template-columns: auto auto;
+  grid-template-rows: 50% 50%
 }
-#Header{
+
+#Header {
+  text-align: center;
   color: darkred;
+  grid-row: 1;
+  grid-column: 1;
+  padding-bottom: 10px;
 }
-.articles-container{
+.nav-bar{
+  display: flex;
+  flex-wrap: wrap;
+  grid-row: 2;
+  grid-column: 2;
+  margin-left: 200px;
+  padding-right: 150px;
+  padding-bottom: 10px;
+  margin-bottom: 60px;
+  width:50px;
+  border-bottom: groove;
+
+}
+
+#home_link, #users_link{
+  padding-right: 40px;
+  text-decoration: none;
+  color: black
+}
+
+.articles-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
-.article{
+
+.article {
   text-align: center;
   font-size: 10px;
   width: 300px;
-  height:320px;
+  height: 320px;
   margin: 1%;
   background-color: aliceblue;
   box-shadow: 0px 0px 3px blue, 0px 1px 3px black
 }
-#article_img{
+
+#article_img {
   width: 100%;
-  height:50%;
+  height: 50%;
   padding-bottom: 5px;
 }
-.article_title{
+
+.article_title {
   width: 100%;
   height: 10%;
   color: darkred;
 }
-.author-italics{
+
+.author-italics {
   font-weight: bold;
   font-style: italic;
 }
-.underline{
+
+.underline {
   text-decoration: underline;
 }
-.article_topic, .article_author{
+
+.article_topic,
+.article_author {
   font-size: 1.4em;
   text-align: left;
   padding-left: 4%;
 }
-.read-me-btn{
+
+.read-me-btn {
   padding: 10px;
   width: 100%;
   background-color: rgb(169, 110, 110);
 }
 
-.bold, .read-me-btn{
+.bold,
+.read-me-btn {
   font-weight: bolder;
 }
-.article-link{
+.article-link {
   text-decoration: none;
-  font-size: 2em;  
+  font-size: 2em;
 }
-
-/* .article-page{
-  display: flex;
-  justify-content: center;
-
-} */
 
 .article_byid-box {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto auto; 
-  gap: 20px; 
-  max-width: 900px; 
-  width: 100%;
-  padding: 20px; 
-  box-sizing: border-box; 
-  justify-items: center; 
+  grid-template-rows: auto auto;
+  gap: 20px;
+  max-width: 100%;
+  width: 70%; 
+  padding: 20px;
+  justify-items: right; 
 }
 
 #solo_title {
-  grid-column: 1 / 4; 
-  grid-row: 1; 
+  grid-column: 1 / 3; 
+  grid-row: 1;
 }
 
 #solo_body {
@@ -89,48 +116,92 @@ html{
 
 #solo_img {
   grid-column: 1;
-  grid-row: 2; 
+  grid-row: 2;
   width: 300px;
   height: 400px;
   margin-top: 7%;
 }
 
-.comments-box{
+.comments-box {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  /* justify-content: c; */
 }
 
-.comment-box{
+.comment-box {
   display: block;
   justify-content: left;
-  border: groove green 3px;
+  border: groove black;
+  box-shadow: 0px 0px 5px darkgreen, 0px 0px 5px black;
   border-radius: 10px;
   margin: 5px;
-  width: 95%;
-  background-color: white;
+  width: 50%;
+  background-color: rgb(238, 246, 246);
 }
-.commentCr, .commentA, .comment{
+
+.commentCr,
+.commentA,
+.comment {
   border-bottom: solid;
   border-radius: 5px;
   padding: 5px;
 }
 
-.btns{
+.btns {
   text-align: center;
 }
 
-.vote-btn-add, .vote-btn-minus{
+.vote-btn-add,
+.vote-btn-minus {
   margin-left: 10px;
   margin-right: 10px;
 }
-.comment_vote{
+
+.comment_vote {
   text-align: center;
   font-weight: bold;
 }
-#vote-text{
+
+#vote-text {
   font-style: italic;
   font-weight: bolder;
   font-size: .8em;
   text-align: center;
+}
+
+.post-comment {
+  margin-top: 10px;
+  border-top: dashed;
+  padding-top: 35px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+#post-btn {
+  margin-left: 50%;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  box-shadow: 0px 0px 5px red, 0px 0px 0px blue
+}
+
+#post-comment,
+#name {
+  border: solid;
+  padding: 5px;
+  margin-left: 5px;
+  box-shadow: 0px 0px 5px red, 0px 0px 0px blue
+}
+
+#name {
+  width: 250px;
+}
+
+#post-comment {
+  width: 400px;
+  height: 100px;
+  margin-left: 20px;
+  line-height: 1.2em;
 }
