--- a/src/App.css
+++ b/src/App.css
@@ -203,3 +203,43 @@ html {
   margin-left: 20px;
   line-height: 1.2em;
 }
+
+.users-page{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 10px
+}
+
+.users-current{
+  grid-column: 1;
+  grid-row: 1/3;
+  padding: 10px;
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.user-new{
+  grid-column: 2;
+  grid-row: 1/3;
+  border: solid;
+}
+
+.user{
+  border: groove red;
+  box-shadow: 1px 2px 3px;
+  border-radius: 50%;
+  width: 250px;
+  height: 250px;
+  padding-right: 30px;
+  padding-top: 35px;
+  background-color: aliceblue;
+
+}
+
+#user-img{
+  width: 100px;
+  height: 100px;
+}
