--- a/src/App.css
+++ b/src/App.css
@@ -16,13 +16,30 @@ html {
   margin-bottom: 10px;
   box-shadow: 1px 1px 10px black;
 }
-#Header{
+#Header {
   color: darkred;
   grid-row: 1;
   grid-column: 2;
   text-align: left;
   font-size: 3em;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+@media (max-width: 768px) {
+  #Header {
+    font-size: 2em; 
+  }
+}
+@media (max-width: 650px) {
+  #Header {
+    font-size: 1.8em; 
+  }
+}
+
+@media (max-width: 480px) {
+  #Header {
+    font-size: 1.5em; 
+  }
 }
 .nav-bar{
   text-align: right;
@@ -193,16 +210,20 @@ justify-content: center;
 
 #solo_title {
   color: darkred;
-  padding-top: 4%;
   grid-row: 1;
-  grid-column: 1/3;
-  justify-content: center;
+  grid-column: 1 / 3;
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+  text-align: center;  
+  height: 100%; 
 }
 #solo_img {
   grid-row: 2;
-  grid-column: 1/2;
+  grid-column: 1;
   width: 100%;
-  height: 100%;
+  height: auto; 
+  max-height: 100%;
 }
 
 #solo_body {
@@ -287,14 +308,14 @@ border-radius: 50%;
   margin-top: -40px;
 }
 #post-comment {
-  width: 100%;
+  width: 90%;
   height: 100px;
   margin-left: 20px;
   line-height: 1.2em;
 }
 .comments-box {
   padding-top: 10px;
-  grid-column: 1/4;
+  grid-column: 2/3;
   width: 100%;
   display: flex;
   flex-wrap: wrap;
@@ -342,7 +363,7 @@ border-radius: 50%;
   text-align: center;
 }
 
-.users-page, .user-profile{
+.users-page{
   display: grid;
   grid-template-columns: 5% 1fr 1fr 5%;
   grid-template-rows: auto;
@@ -387,19 +408,44 @@ border-radius: 50%;
   justify-content: center;
 }
 
-#sign-out-btn{
-  grid-row: 1;
-  grid-column: 2;
+.user-profile{
+  display: grid;
+  grid-column: 2/4;
+  grid-template-columns: 70px 1fr 1fr 5%;
+  grid-template-rows: 35px 50px 300px 1fr;
+  /* display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+} */
 }
-#user-name{
+#profile-image{
+  grid-row: 2;
+  grid-column: 3/5;
+}
+#profile-name{
   grid-row: 2;
   grid-column: 2;
 }
-#user-image{
-  grid-row: 3;
-  grid-column: 2;
+#sign-out-btn{
+  border: solid;
+  grid-row: 1;
+  grid-column: 1;
 }
 .userArticles{
+  grid-column: 2/4;
   grid-row: 4;
-  grid-column: 2;
+}
+
+.userArticles ul:nth-child(odd) {
+background-color: rgb(206, 218, 222);
+padding: 25px;
+margin-bottom: -16px;
+border-top: solid;
+border-bottom: solid;
+}
+
+.userArticles ul:nth-child(even) {
+  background-color:lightgray;
+  padding: 25px;
+  margin-bottom: -16px;
 }
